--- a/integration.html
+++ b/integration.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Maven Sitemap generator plugin - Team list</title>
+    <title>Maven Sitemap generator plugin - Continuous Integration</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -68,8 +68,8 @@
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
-                          <a href="integration.html" title="Continuous Integration">Continuous Integration</a>
-            </li>
+            <strong>Continuous Integration</strong>
+          </li>
                       <li class="none">
                           <a href="dependencies.html" title="Dependencies">Dependencies</a>
             </li>
@@ -83,8 +83,8 @@
                           <a href="plugins.html" title="Project Plugins">Project Plugins</a>
             </li>
                       <li class="none">
-            <strong>Project Team</strong>
-          </li>
+                          <a href="team-list.html" title="Project Team">Project Team</a>
+            </li>
                       <li class="none">
                           <a href="source-repository.html" title="Source Repository">Source Repository</a>
             </li>
@@ -107,46 +107,16 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>The Team<a name="The_Team"></a></h2><a name="The_Team"></a>
-<p>A successful project requires many people to play many roles. Some members write code or documentation, while others are valuable as testers, submitting patches and suggestions.</p>
-<p>The team is comprised of Members and Contributors. Members have direct access to the source of a project and actively evolve the code-base. Contributors improve the project through submission of patches and suggestions to the Members. The number of Contributors to the project is unbounded. Get involved today. All contributions to the project are greatly appreciated.</p>
+<h2>Overview<a name="Overview"></a></h2><a name="Overview"></a>
+<p>This project uses Continuous Integration System.</p></div>
 <div class="section">
-<h3>Members<a name="Members"></a></h3><a name="Members"></a>
-<p>The following is a list of developers with commit privileges that have directly contributed to the project in one way or another.</p>
-<table border="0" class="bodyTable">
-<tr class="a">
-<th>Image</th>
-<th>Id</th>
-<th>Name</th>
-<th>Email</th>
-<th>Time Zone</th>
-<th>Actual Time (GMT)</th></tr>
-<tr class="b">
-<td><img src="http://www.gravatar.com/avatar/2b7a858c0b6b2da80fa54be1e1177688?d=mm&amp;s=60" alt="" /></td>
-<td><a name="sjaranowski"></a>sjaranowski</td>
-<td>Slawomir Jaranowski</td>
-<td><a class="externalLink" href="mailto:s.jaranowski@gmail.com">s.jaranowski@gmail.com</a></td>
-<td>Europe/Warsaw</td>
-<td><span id="developer-0">Europe/Warsaw</span></td></tr></table></div>
+<h2>Access<a name="Access"></a></h2><a name="Access"></a>
+<p>The following is a link to the continuous integration system used by the project.</p>
+<div class="source">
+<pre><a class="externalLink" href="https://travis-ci.org/s4u/sitemapxml-maven-plugin">https://travis-ci.org/s4u/sitemapxml-maven-plugin</a></pre></div></div>
 <div class="section">
-<h3>Contributors<a name="Contributors"></a></h3><a name="Contributors"></a>
-<p>There are no contributors listed for this project. Please check back again later.</p><script type="text/javascript">
-function offsetDate(id, offset) {
-    var now = new Date();
-    var nowTime = now.getTime();
-    var localOffset = now.getTimezoneOffset();
-    var developerTime = nowTime + ( offset * 60 * 60 * 1000 )+ ( localOffset * 60 * 1000 );
-    var developerDate = new Date(developerTime);
-
-    document.getElementById(id).innerHTML = developerDate;
-}
-
-function init(){
-    offsetDate('developer-0', '1');
-}
-
-window.onLoad = init();
-</script></div></div>
+<h2>Notifiers<a name="Notifiers"></a></h2><a name="Notifiers"></a>
+<p>No notifiers are defined. Please check back at a later date.</p></div>
       </div>
     </div>
     <div class="clear">
