--- a/license.html
+++ b/license.html
@@ -406,6 +406,7 @@ limitations under the License.
 <li><a href="http://nutch.apache.org/" title="Open Source Web Search Software">Nutch</a></li>
 <li><a href="http://ode.apache.org/" title="Orchestration Director Engine: Business Process Management (BPM), Process Orchestration and Workflow through service composition.">ODE</a></li>
 <li><a href="http://ofbiz.apache.org/" title="Open for Business: enterprise automation software">OFBiz</a></li>
+<li><a href="http://olingo.apache.org/" title="OASIS OData protocol libraries">Olingo</a></li>
 <li><a href="http://oltu.apache.org/" title="OAuth protocol implementation in Java">Oltu</a></li>
 <li><a href="http://onami.apache.org/" title="Development and maintenance of a set of Google Guice extensions">Onami</a></li>
 <li><a href="http://oodt.apache.org/" title="Object Oriented Data Technology (middleware metadata)">OODT</a></li>
