--- a/plugins.html
+++ b/plugins.html
@@ -166,6 +166,10 @@
 <td><a class="externalLink" href="http://maven.apache.org/surefire/maven-surefire-plugin">maven-surefire-plugin</a></td>
 <td>2.17</td></tr>
 <tr class="a">
+<td>org.codehaus.mojo</td>
+<td><a class="externalLink" href="http://mojo.codehaus.org/templating-maven-plugin">templating-maven-plugin</a></td>
+<td>1.0-alpha-3</td></tr>
+<tr class="b">
 <td>org.sonatype.plugins</td>
 <td><a class="externalLink" href="http://www.sonatype.com/public-parent/nexus-maven-plugins/nexus-staging/nexus-staging-maven-plugin/">nexus-staging-maven-plugin</a></td>
 <td>1.6</td></tr></table></div>
