--- a/plugin-info.html
+++ b/plugin-info.html
@@ -97,7 +97,10 @@
 <td>Generate sitemap.xml for project site.</td></tr>
 <tr class="a">
 <td><a href="help-mojo.html">sitemapxml:help</a></td>
-<td>No description.</td></tr></table>
+<td>Display help information on sitemapxml-maven-plugin.<br />
+Call <code>mvn com.github.s4u.plugins:sitemapxml-maven-plugin:help
+-Ddetail=true -Dgoal=&lt;goal-name&gt;</code> to display parameter
+details.</td></tr></table>
 <div class="section">
 <h3>System Requirements<a name="System_Requirements"></a></h3><a name="System_Requirements"></a>
 <p>The following specifies the minimum requirements to run this Maven plugin:</p>
